--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>Legal Notice</title>
+		<title>学分</title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
 		<script src="/js/local-storage-track.js"></script>
@@ -132,15 +132,14 @@
 					</div>
 				</div>
 			</div>
-
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-gray-600 dark:text-gray-300">主页 </a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
-					<a href="../changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
+					<a href="./" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
 					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
-					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
+					<a href="../credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">学分</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
@@ -174,7 +173,6 @@
 		</nav>
 
 		<!-- auto closer for lang menu -->
-		<!-- auto closer for lang menu -->
 		<div class="auto-closer hidden z-10 w-[100%] h-2 absolute"></div>
 
 		<!-- content -->
@@ -191,21 +189,21 @@
 			<!-- paras -->
 			<section class="px-10 lg:px-52 pt-20 space-y-10 text-gray-700 dark:text-gray-300">
 				<section class="space-y-2">
-					<h2 class="font-medium text-2xl">Copyright Notice</h2>
+					<h2 class="font-medium text-2xl">版权声明</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to Alexandr Dorofeev and is subject to relevant copyright conventions. Exclusive publishing by [Profispieler] [云玩家].</li>
-							<li>[Profispieler] [云玩家] reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
+							<li>本网站包含的所有内容、软件、程序、代码、技术和用户界面均受版权法保护。版权属于 Alexandr Dorofeev 并受相关版权公约的约束。</li>
+							<li>Alexandr Dorofeev 保留对上述版权的任何超出合理使用范围的使用以及未经其书面许可追究法律责任的权利。</li>
 						</ul>
 					</div>
 				</section>
 
 				<section class="space-y-2">
-					<h2 class="font-medium text-2xl">Trademark Statement</h2>
+					<h2 class="font-medium text-2xl">商标声明</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All trademarks and marks used and displayed on this website belong to [Profispieler] [云玩家] and are protected by the Trademark Law of the People's Republic of China, the Anti Unfair Competition Law of the People's Republic of China and relevant international conventions.</li>
-							<li>Without prior written permission of [Profispieler] [云玩家] , trademarks, marks and software names of [Profispieler] [云玩家] shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and [Profispieler] [云玩家] reserves the right to pursue legal responsibilities.</li>
+							<li>本网站上使用和展示的所有商标和标志均属于 Alexandr Dorofeev，并受国际公约保护。</li>
+							<li>未经 Alexandr Dorofeev 事先书面许可，不得以任何方式使用 Alexandr Dorofeev 的商标、标志和软件名称。未经授权使用上述商标可能构成商标侵权，Alexandr Dorofeev保留追究法律责任的权利。</li>
 						</ul>
 					</div>
 				</section>
@@ -397,7 +395,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="../legal-notice/" class="hidden pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
+						<a href="../legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">版权声明</a>
 					</div>
 
@@ -420,5 +418,6 @@
 		<script src="/js/contact-popup.js"></script>
 		<script src="/js/auto-closer.js"></script>
 		<script src="/js/animator.js"></script>
+		<script src="/js/changelog.js"></script>
 	</body>
 </html>
