--- a/public/lang/es/faq/index.html
+++ b/public/lang/es/faq/index.html
@@ -766,7 +766,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="../legal-notice/" pr-4 hidden hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="../legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Reclamaciones de derechos de autor</a>
 					</div>
 
