--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -194,8 +194,8 @@
 					<h2 class="font-medium text-2xl">Copyright Notice</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to Alexandr Dorofeev and is subject to relevant copyright conventions. Exclusive publishing by [Profispieler] [云玩家].</li>
-							<li>[Profispieler] [云玩家] reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
+							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to Alexandr Dorofeev and is subject to relevant copyright conventions.</li>
+							<li>Alexandr Dorofeev reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
 						</ul>
 					</div>
 				</section>
@@ -204,8 +204,8 @@
 					<h2 class="font-medium text-2xl">Trademark Statement</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All trademarks and marks used and displayed on this website belong to [Profispieler] [云玩家] and are protected by the Trademark Law of the People's Republic of China, the Anti Unfair Competition Law of the People's Republic of China and relevant international conventions.</li>
-							<li>Without prior written permission of [Profispieler] [云玩家] , trademarks, marks and software names of [Profispieler] [云玩家] shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and [Profispieler] [云玩家] reserves the right to pursue legal responsibilities.</li>
+							<li>All trademarks and marks used and displayed on this website belong to Alexandr Dorofeev and are protected by international conventions.</li>
+							<li>Without prior written permission of Alexandr Dorofeev, trademarks, marks and software names of Alexandr Dorofeev shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and Alexandr Dorofeev reserves the right to pursue legal responsibilities.</li>
 						</ul>
 					</div>
 				</section>
@@ -397,7 +397,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="../legal-notice/" pr-4 hidden hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="../legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 
