chinese legal notice page complete

--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -139,7 +139,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
 					<a href="./" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
 					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
-					<a href="../credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">学分</a>
+					<a href="../credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
@@ -179,7 +179,7 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">法律声明</span>
 				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
 					<p>Legal</p>
 					<p>Notice</p>
