legal notice relative link fix test

--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -530,7 +530,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="cn/legal-notice" class="pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
+						<a href="/legal-notice" class="pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">版权声明</a>
 					</div>
 
