added absolute links instead of relative to fix vercel issue

--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -32,7 +32,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="./" class="flex items-center">
+					<a href="/" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -40,12 +40,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> 主页 </a>
+					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> 主页 </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 下载 </a>
-					<a href="./changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
-					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
-					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
+					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
+					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
+					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">联系我们</button>
 				</div>
 
@@ -141,9 +141,9 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">主页 </a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
-					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
-					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
-					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
+					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
+					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
+					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
