--- a/public/lang/de/index.html
+++ b/public/lang/de/index.html
@@ -32,7 +32,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="./" class="flex items-center">
+					<a href="/" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -40,12 +40,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
+					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Home </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Herunterladen </a>
-					<a href="./changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Änderungsprotokoll </a>
-					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
+					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Änderungsprotokoll </a>
+					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Kontakt</button>
 				</div>
 
@@ -140,11 +140,11 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
+					<a href="/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
-					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
-					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
+					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
+					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
 					<!-- mobile language button -->
@@ -531,7 +531,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="./legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Urheberrechtsansprüche</a>
 					</div>
 
