--- a/public/lang/es/credits/index.html
+++ b/public/lang/es/credits/index.html
@@ -28,7 +28,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="../" class="flex items-center">
+					<a href="/" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -36,12 +36,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="../" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Inicio </a>
+					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Inicio </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Descargar </a>
-					<a href="../changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Cambios </a>
-					<a href="../faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="../credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Créditos </a>
+					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Cambios </a>
+					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="/credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Créditos </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contacto</button>
 				</div>
 
@@ -136,11 +136,11 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="../" class="block text-gray-600 dark:text-gray-300">Inicio</a>
+					<a href="/" class="block text-gray-600 dark:text-gray-300">Inicio</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
 					<a href="./" class="block text-gray-600 dark:text-gray-300">Cambios</a>
-					<a href="../faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="../credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Créditos</a>
+					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Créditos</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
@@ -551,7 +551,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="../legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Reclamaciones de derechos de autor</a>
 					</div>
 
