--- a/public/lang/ru/index.html
+++ b/public/lang/ru/index.html
@@ -32,7 +32,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-4 xl:pl-10">
-					<a href="../" class="flex items-center">
+					<a href="/" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -40,12 +40,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="./" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Домой </a>
+					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Домой </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Скачать </a>
-					<a href="./changelog/" class="text-gray-800 w-44 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Журнал изменений </a>
-					<a href="./faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> ЧаВо </a>
-					<a href="./credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Кредиты </a>
+					<a href="/changelog/" class="text-gray-800 w-44 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Журнал изменений </a>
+					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> ЧаВо </a>
+					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Кредиты </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Связаться с нами</button>
 				</div>
 
@@ -143,9 +143,9 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Домой</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
-					<a href="./changelog/" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
-					<a href="./faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
-					<a href="./credits/" class="block text-gray-600 dark:text-gray-300">Кредиты</a>
+					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
+					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
+					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Кредиты</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Связаться с нами</button>
 
 					<!-- mobile language button -->
@@ -533,7 +533,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="./legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Жалобы на нарушение авторских прав</a>
 					</div>
 
